--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid red;
+  
 }
 .list {
   list-style: none;
@@ -58,6 +58,7 @@ body {
 .header{
   padding-top: 24px;
   padding-bottom: 25px;
+  border-bottom: 1px solid #EEEEEE ;
   
 }
 .header .container{
@@ -148,8 +149,8 @@ body {
 /* section 1 */
 .section-1 {
   background-color: #2f303a;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 94px;
+  padding-bottom: 94px;
   
 }
 .section-1-content{
@@ -192,6 +193,7 @@ background-color: var(--accent-color);
 /* section 2 */
 .section-2{
   padding-top: 94px;
+  padding-bottom: 94px;
 }
 .section-2-list {
   display: flex;
@@ -505,8 +507,8 @@ border-radius: 0px 0px 4px 4px;
 /* portfolio */
 /* first */
 .portfolio-section{
-  padding-top: 146px;
-  padding-bottom: 108px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .first-portfolio-list{
   margin-bottom: 32px;
