--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,14 @@ body {
   font-family: 'roboto',sans-serif;
 }
 .box{
-  border: 1px solid #EEEEEE;
   
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE ;
+  border-right:1px solid #EEEEEE ;
 }
 
-.container{
+.container {
+  
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -56,11 +59,8 @@ body {
 }
 /*header */
 .header{
-  padding-top: 24px;
-  padding-bottom: 25px;
   border-bottom: 1px solid #EEEEEE ;
-  
-}
+  }
 .header .container{
   display: flex;
   justify-content: space-between;
@@ -70,7 +70,9 @@ body {
 }
 .header-nav-list{
   display: flex;
-  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+ 
 }
 .header-nav-item-1 {
   font-family: 'roboto',sans-serif;
@@ -109,12 +111,14 @@ body {
   letter-spacing: 0.03em;
   color: var(--accent-color);
   margin-right: 93px;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 .studio-logo {
   color: var(--first-text-color);
   font-weight: bold;
 }
-.header-list-contats {
+.header-list-contacts {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -122,10 +126,14 @@ body {
 
   color: var(--first-text-color);
   display: flex;
-  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .header-item:not(:last-child){
   margin-right: 50px;
+}
+.header-contact-item{
+  margin-left: 50px;
 }
 .header-mail-item {
   font-family:'roboto',sans-serif;
@@ -142,22 +150,16 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  margin-left: 50px;
   color: var(--second-text-color);
 }
 /* main */
 /* section 1 */
 .section-1 {
   background-color: #2f303a;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  
-}
-.section-1-content{
-display: flex;
-flex-direction: column;
-align-items: center
-}
+  padding-top: 200px;
+  padding-bottom: 200px;
+  padding-left: 452px;
+  }
 
 .section-1-title {
   font-weight: 900;
@@ -172,7 +174,7 @@ align-items: center
  padding-left: 35px;
 }
 .section-1-button {
-  background-color: #2f303a;
+  background-color: var(--accent-color);
   border-radius: 4px;
   font-weight: bold;
   font-size: 16px;
@@ -181,37 +183,40 @@ align-items: center
   cursor: pointer;
   min-width: 200px;
   height: 50px;
+  margin-left: 200px;
 
   color: var(--btn-color);
 }
 .section-1-button:hover {
-  background-color: var(--accent-color);
+  background-color: #155c95;
 }
 .section-1-button:focus{
-background-color: var(--accent-color);
+background-color: #155c95;
 }
 /* section 2 */
 .section-2{
   padding-top: 94px;
-  padding-bottom: 94px;
+  
 }
 .section-2-list {
   display: flex;
-  
-}
+  }
 .section-2-item-1 {
   margin-left: 0;
   margin-right: 30px;
-
+  width: 270px;
 }
 .section-2-item-2{
   margin-right: 30px;
+  width: 270px;
 }
 .section-2-item-3{
   margin-right: 30px;
+  width: 270px;
 }
 .section-2-item-4{
   margin-right: 0;
+  width: 270px;
 }
 .section-2-title-1 {
   font-weight: bold;
@@ -228,7 +233,7 @@ background-color: var(--accent-color);
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
-  max-width: 270px;
+  
 }
 .section-2-title-2 {
   font-weight: bold;
@@ -238,7 +243,6 @@ background-color: var(--accent-color);
   color: var(--first-text-color);
   text-transform: uppercase;
   margin-bottom: 10px;
-  
 }
 .section-2-description-2 {
   font-weight: normal;
@@ -246,8 +250,6 @@ background-color: var(--accent-color);
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
-  max-width: 270px;
- 
 }
 .section-2-title-3 {
   font-weight: bold;
@@ -257,15 +259,13 @@ background-color: var(--accent-color);
   color: var(--first-text-color);
   text-transform: uppercase;
   margin-bottom: 10px;
- 
-}
+ }
 .section-2-description-3 {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
-  max-width: 270px;
   
 }
 .section-2-title-4 {
@@ -276,7 +276,6 @@ background-color: var(--accent-color);
   color: var(--first-text-color);
   text-transform: uppercase;
   margin-bottom: 10px;
-  
 }
 .section-2-description-4 {
   font-weight: normal;
@@ -284,9 +283,7 @@ background-color: var(--accent-color);
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
-  max-width: 270px;
-  
-}
+ }
 /* section 3 */
 .section-3{
   padding-top: 94px;
@@ -301,7 +298,7 @@ background-color: var(--accent-color);
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   margin-bottom: 50px;
-  padding-left: 393px;
+  text-align: center;
  
 }
 .section-3-list{
@@ -321,7 +318,7 @@ background-color: var(--accent-color);
 /* section 4 */
 .section-4 {
   background-color: #f5f4fa;
-  padding-top: 94px;
+  
   padding-bottom: 94px;
   
 }
@@ -333,7 +330,7 @@ background-color: var(--accent-color);
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   margin-bottom: 42px;
-  padding-left: 452px;
+  text-align: center;
  }
 
 .section-4-list{
@@ -380,8 +377,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  margin-top: 30px;
-  padding-left: 60px;
+  text-align: center;
 }
 .section-4-img1-profession {
   font-weight: normal;
@@ -390,8 +386,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   margin-top: 10px;
-  padding-left: 70px;
-  padding-bottom: 30px;
+  text-align: center;
 }
 .section-4-img2-name {
   font-weight: 500;
@@ -399,8 +394,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  margin-top: 30px;
-  padding-left: 81px;
+  text-align: center;
 }
 .section-4-img2-profession {
   font-weight: normal;
@@ -409,8 +403,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   margin-top: 10px;
-  padding-left: 62px;
-  padding-bottom: 30px;
+  text-align: center;
 }
 .section-4-img3-name {
   font-weight: 500;
@@ -418,10 +411,8 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  margin-top: 30px;
-  padding-left: 67px;
-
-}
+  text-align: center;
+ }
 .section-4-img3-profession {
   font-weight: normal;
   font-size: 16px;
@@ -429,8 +420,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   margin-top: 10px;
-  padding-left: 97px;
-  padding-bottom: 30px;
+  text-align: center;
 }
 
 .section-4-img4-name {
@@ -439,8 +429,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-  margin-top: 30px;
-  padding-left: 68px;
+  text-align: center;
 }
 .section-4-img4-profession {
   font-weight: normal;
@@ -449,9 +438,26 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   margin-top: 10px;
-  padding-left: 92px;
-  padding-bottom: 30px;
+  text-align: center;
+  
 }
+.employee-description-1{
+  padding-top: 32px;
+  padding-left: 32px;
+}
+.employee-description-2 {
+padding-top: 32px;
+padding-left: 32px;
+}
+.employee-description-3 {
+padding-top: 32px;
+padding-left: 32px;
+}
+.employee-description-4 {
+padding-top: 32px;
+padding-left: 32px;
+}
+
 /* footer */
 .footer {
   background-color: #2f303a;
@@ -474,9 +480,7 @@ border-radius: 0px 0px 4px 4px;
 .footer-studio-logo {
   color: #ffffff;
 }
-.footer-address-list:not(:last-child){
-  margin-top: 9px;
-}
+
 .footer-adress-item {
   font-family: Roboto;
   font-style: normal;
@@ -485,6 +489,9 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-color);
+  display: block;
+  margin-bottom: 9px;
+  
 }
 .footer-mail-item {
   font-family: Roboto;
@@ -494,6 +501,8 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  display: block;
+  margin-bottom: 9px;
 }
 .footer-tel-item {
   font-family: Roboto;
@@ -507,17 +516,18 @@ border-radius: 0px 0px 4px 4px;
 /* portfolio */
 /* first */
 .portfolio-section{
+
   padding-top: 94px;
   padding-bottom: 94px;
+  
 }
 .first-portfolio-list{
-  margin-bottom: 32px;
+  margin-bottom: 50px;
   display: flex;
   justify-content: center;
 }
 .fierst-portfolio-item:not( :last-child) {
   margin-right: 8px;
-
 }
 .portfolio-button1 {
   background-color: var(--btn-color-porfolio);
@@ -529,6 +539,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   cursor: pointer;
+  padding: 6px 22px;
 }
 .portfolio-button2 {
   background-color: var(--btn-color-porfolio);
@@ -540,6 +551,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   cursor: pointer;
+  padding: 6px 22px;
 }
 .portfolio-button3 {
   background-color: var(--btn-color-porfolio);
@@ -551,6 +563,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   cursor: pointer;
+  padding: 6px 22px;
 }
 .portfolio-button4 {
   background-color: var(--btn-color-porfolio);
@@ -562,6 +575,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   cursor: pointer;
+  padding: 6px 22px;
 }
 .portfolio-button5 {
   background-color: var(--btn-color-porfolio);
@@ -573,6 +587,7 @@ border-radius: 0px 0px 4px 4px;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
   cursor: pointer;
+  padding: 6px 22px;
 }
 .portfolio-button1:hover {
   background-color: var(--accent-color);
@@ -618,12 +633,48 @@ border-radius: 0px 0px 4px 4px;
 .second-portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  
 
 }
-.second-portfolio-item{
-  margin-top: 29px;
-  box-sizing: border-box;
+.second-portfolio-item-1{
+  margin-top: 0;
+  margin-right: 30px;
+  
+}
+.second-portfolio-item-2{
+margin-top: 0;
+margin-right: 30px;
+}
+.second-portfolio-item-3{
+margin-top: 0;
+
+}
+.second-portfolio-item-4{
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.second-portfolio-item-5 {
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.second-portfolio-item-6 {
+  margin-top: 30px;
+}
+.second-portfolio-item-7 {
+  margin-top: 30px;
+  margin-right: 30px;
+}
+.second-portfolio-item-8 {
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+.second-portfolio-item-9 {
+  margin-top: 30px;
+}
+.portfolio-item-description{
+  padding: 20px 24px;
+
 }
 .second-portfolio-item-name1 {
   font-weight: bold;
@@ -631,9 +682,6 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
-  
-  
 }
 .second-portfolio-item-img1-description {
   font-weight: normal;
@@ -649,7 +697,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+ 
 }
 .second-portfolio-item-img2-description {
   font-weight: normal;
@@ -664,7 +712,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+ 
 }
 .second-portfolio-item-img3-description {
   font-weight: normal;
@@ -679,7 +727,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+ 
 }
 .second-portfolio-item-img4-description {
   font-weight: normal;
@@ -694,7 +742,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+ 
 }
 .second-portfolio-item-img5-description {
   font-weight: normal;
@@ -709,7 +757,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+ 
 }
 .second-portfolio-item-img6-description {
   font-weight: normal;
@@ -724,7 +772,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+
 }
 .second-portfolio-item-img7-description {
   font-weight: normal;
@@ -739,7 +787,6 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
 }
 .second-portfolio-item-img8-description {
   font-weight: normal;
@@ -754,7 +801,7 @@ border-radius: 0px 0px 4px 4px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  margin-top: 20px;
+  
 }
 .second-portfolio-item-img9-description {
   font-weight: normal;
