--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,12 @@ body {
 }
 .header-nav-list{
   display: flex;
+ 
+ }
+.header-nav-item-1 {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
- 
-}
-.header-nav-item-1 {
   font-family: 'roboto',sans-serif;
 
   font-weight: 500;
@@ -85,6 +86,9 @@ body {
   color: var(--first-text-color);
 }
 .header-nav-item-2 {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-family: 'roboto',sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -94,6 +98,9 @@ body {
   color: var(--first-text-color);
 }
 .header-nav-item-3 {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-family: 'roboto',sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -126,8 +133,6 @@ body {
 
   color: var(--first-text-color);
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 .header-item:not(:last-child){
   margin-right: 50px;
@@ -136,6 +141,9 @@ body {
   margin-left: 50px;
 }
 .header-mail-item {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-family:'roboto',sans-serif;
   font-style: normal;
   font-size: 14px;
@@ -145,6 +153,9 @@ body {
   color: var(--second-text-color);
 }
 .header-tel-item {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-family: 'roboto',sans-serif;
   font-style: normal;
   font-size: 14px;
@@ -158,9 +169,10 @@ body {
   background-color: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
-  padding-left: 452px;
   }
-
+.section-1-content{
+  margin: auto 452px;
+}
 .section-1-title {
   font-weight: 900;
   font-size: 44px;
@@ -183,9 +195,8 @@ body {
   cursor: pointer;
   min-width: 200px;
   height: 50px;
-  margin-left: 200px;
-
   color: var(--btn-color);
+ margin-left: 200px;
 }
 .section-1-button:hover {
   background-color: #155c95;
@@ -318,7 +329,7 @@ background-color: #155c95;
 /* section 4 */
 .section-4 {
   background-color: #f5f4fa;
-  
+  padding-top: 94px;
   padding-bottom: 94px;
   
 }
@@ -442,20 +453,20 @@ border-radius: 0px 0px 4px 4px;
   
 }
 .employee-description-1{
-  padding-top: 32px;
-  padding-left: 32px;
+  padding-top: 30px;
+  padding-left: 30px;
 }
 .employee-description-2 {
-padding-top: 32px;
-padding-left: 32px;
+padding-top: 30px;
+padding-left: 30px;
 }
 .employee-description-3 {
-padding-top: 32px;
-padding-left: 32px;
+padding-top: 30px;
+padding-left: 30px;
 }
 .employee-description-4 {
-padding-top: 32px;
-padding-left: 32px;
+padding-top: 30px;
+padding-left: 30px;
 }
 
 /* footer */
@@ -490,7 +501,7 @@ padding-left: 32px;
   letter-spacing: 0.03em;
   color: var(--footer-color);
   display: block;
-  margin-bottom: 9px;
+  
   
 }
 .footer-mail-item {
@@ -502,7 +513,7 @@ padding-left: 32px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   display: block;
-  margin-bottom: 9px;
+  
 }
 .footer-tel-item {
   font-family: Roboto;
@@ -512,6 +523,12 @@ padding-left: 32px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+.footer-item-adress{
+  margin-bottom: 9px;
+}
+.footer-item-mail {
+  margin-bottom: 9px;
 }
 /* portfolio */
 /* first */
@@ -682,6 +699,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img1-description {
   font-weight: normal;
@@ -697,7 +715,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
- 
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img2-description {
   font-weight: normal;
@@ -712,7 +730,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
- 
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img3-description {
   font-weight: normal;
@@ -727,7 +745,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
- 
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img4-description {
   font-weight: normal;
@@ -742,7 +760,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
- 
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img5-description {
   font-weight: normal;
@@ -757,7 +775,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
- 
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img6-description {
   font-weight: normal;
@@ -772,7 +790,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img7-description {
   font-weight: normal;
@@ -787,6 +805,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img8-description {
   font-weight: normal;
@@ -801,7 +820,7 @@ margin-top: 0;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
-  
+  margin-bottom: 4px;
 }
 .second-portfolio-item-img9-description {
   font-weight: normal;
