--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,7 @@ body {
   padding-top: 200px;
   padding-bottom: 200px;
   }
-.section-1-content{
-  margin: auto 452px;
-}
+
 .section-1-title {
   font-weight: 900;
   font-size: 44px;
@@ -181,6 +179,7 @@ body {
   color: var(--section1-title-color);
   text-transform: uppercase;
   margin-bottom: 30px;
+  text-align: center;
 }
 .section-1-title-span{
  padding-left: 35px;
@@ -196,7 +195,8 @@ body {
   min-width: 200px;
   height: 50px;
   color: var(--btn-color);
- margin-left: 200px;
+ display: block;
+ margin: 0 auto;
 }
 .section-1-button:hover {
   background-color: #155c95;
@@ -454,19 +454,19 @@ border-radius: 0px 0px 4px 4px;
 }
 .employee-description-1{
   padding-top: 30px;
-  padding-left: 30px;
+  margin-bottom: 30px;
 }
 .employee-description-2 {
 padding-top: 30px;
-padding-left: 30px;
+margin-bottom: 30px;
 }
 .employee-description-3 {
 padding-top: 30px;
-padding-left: 30px;
+margin-bottom: 30px;
 }
 .employee-description-4 {
 padding-top: 30px;
-padding-left: 30px;
+margin-bottom: 30px;
 }
 
 /* footer */
